--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do List</title>
-<script defer src="main.bundle.js"></script><link href="style.css" rel="stylesheet"></head>
+<script defer src="main.bundle.f8640a4ebbf16f2fc7b5.js"></script><link href="style.f8640a4ebbf16f2fc7b5.css" rel="stylesheet"></head>
 <body>
     <div id="root">
         
